--- a/.github/workflows/OpenWrt Official GCC9.yml
+++ b/.github/workflows/OpenWrt Official GCC9.yml
@@ -23,7 +23,7 @@ env:
   REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: master
   FEEDS_CONF: official.feeds.conf.default
-  CONFIG_FILE: ARMv8/official-gcc11.config
+  CONFIG_FILE: official-gcc11.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: openwrt-21.02-diy-part2.sh
   UPLOAD_BIN_DIR: false
@@ -162,24 +162,14 @@ jobs:
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
-        retain_days: 60
-        keep_minimum_runs: 60
+        retain_days: 2
+        keep_minimum_runs: 3
 
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.2.0
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-        keep_latest: 30
+        keep_latest: 5
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Telegram notification
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: |
-          编译时间：${{ env.DATE }}
-          OpenWrt 更新信息：${{ env.useVersionInfo }}
-          ${{ env.PRODUCT_NAME }} 编译完成
