--- a/official-gcc11.config
+++ b/official-gcc11.config
@@ -1518,7 +1518,7 @@ CONFIG_PACKAGE_dnsmasq_full_conntrack=y
 # CONFIG_PACKAGE_dnsmasq_full_noid is not set
 # CONFIG_PACKAGE_dnsmasq_full_broken_rtc is not set
 # CONFIG_PACKAGE_dnsmasq_full_tftp is not set
-CONFIG_PACKAGE_dropbear=y
+# CONFIG_PACKAGE_dropbear is not set
 
 #
 # Configuration
