--- a/official-gcc11.config
+++ b/official-gcc11.config
@@ -3449,6 +3449,8 @@ CONFIG_PACKAGE_python3-urllib=y
 # CONFIG_PACKAGE_python3-urllib-src is not set
 CONFIG_PACKAGE_python3-urllib3=y
 # CONFIG_PACKAGE_python3-urllib3-src is not set
+CONFIG_PACKAGE_python3-uuid=y
+# CONFIG_PACKAGE_python3-uuid-src is not set
 # CONFIG_PACKAGE_python3-vobject is not set
 # CONFIG_PACKAGE_python3-voluptuous is not set
 # CONFIG_PACKAGE_python3-voluptuous-serialize is not set
@@ -4394,7 +4396,7 @@ CONFIG_PACKAGE_boost-wave=y
 # CONFIG_PACKAGE_ibrdtn is not set
 CONFIG_PACKAGE_icu=y
 # CONFIG_PACKAGE_icu-data-tools is not set
-CONFIG_PACKAGE_icu-full-data=y
+# CONFIG_PACKAGE_icu-full-data is not set
 # CONFIG_PACKAGE_jansson is not set
 # CONFIG_PACKAGE_json-glib is not set
 # CONFIG_PACKAGE_jsoncpp is not set
@@ -4428,8 +4430,8 @@ CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
 CONFIG_PACKAGE_libcap-ng=y
 # CONFIG_PACKAGE_libcap-ng-bin is not set
 CONFIG_PACKAGE_libcares=y
-CONFIG_PACKAGE_libcbor=y
-# CONFIG_PACKAGE_libcgroup is not set
+# CONFIG_PACKAGE_libcbor is not set
+CONFIG_PACKAGE_libcgroup=y
 CONFIG_PACKAGE_libcharset=y
 # CONFIG_PACKAGE_libcoap is not set
 CONFIG_PACKAGE_libcomerr=y
@@ -4522,7 +4524,7 @@ CONFIG_PACKAGE_libffmpeg-audio-dec=y
 # CONFIG_PACKAGE_libffmpeg-custom is not set
 # CONFIG_PACKAGE_libffmpeg-full is not set
 # CONFIG_PACKAGE_libffmpeg-mini is not set
-CONFIG_PACKAGE_libfido2=y
+# CONFIG_PACKAGE_libfido2 is not set
 CONFIG_PACKAGE_libflac=y
 # CONFIG_PACKAGE_libfmt is not set
 CONFIG_PACKAGE_libfreetype=y
@@ -4813,7 +4815,7 @@ CONFIG_PACKAGE_libwrap=y
 # CONFIG_PACKAGE_minizip is not set
 CONFIG_PACKAGE_msgpack-c=y
 # CONFIG_PACKAGE_mtdev is not set
-# CONFIG_PACKAGE_musl-fts is not set
+CONFIG_PACKAGE_musl-fts=y
 # CONFIG_PACKAGE_mxml is not set
 CONFIG_PACKAGE_nspr=y
 CONFIG_PACKAGE_oniguruma=y
@@ -6521,11 +6523,12 @@ CONFIG_PACKAGE_tc-tiny=y
 # SSH
 #
 CONFIG_PACKAGE_autossh=y
-# CONFIG_PACKAGE_openssh-client is not set
-# CONFIG_PACKAGE_openssh-client-utils is not set
-# CONFIG_PACKAGE_openssh-keygen is not set
-# CONFIG_PACKAGE_openssh-moduli is not set
-# CONFIG_PACKAGE_openssh-server is not set
+CONFIG_PACKAGE_openssh-client=y
+CONFIG_PACKAGE_openssh-client-utils=y
+CONFIG_PACKAGE_openssh-keygen=y
+CONFIG_PACKAGE_openssh-moduli=y
+CONFIG_PACKAGE_openssh-server=y
+# CONFIG_OPENSSH_LIBFIDO2 is not set
 # CONFIG_PACKAGE_openssh-server-pam is not set
 CONFIG_PACKAGE_openssh-sftp-avahi-service=y
 CONFIG_PACKAGE_openssh-sftp-client=y
@@ -7245,8 +7248,8 @@ CONFIG_PACKAGE_bsdtar=y
 CONFIG_PACKAGE_bzip2=y
 CONFIG_PACKAGE_gzip=y
 CONFIG_PACKAGE_lz4=y
-# CONFIG_PACKAGE_pigz is not set
-# CONFIG_PACKAGE_unrar is not set
+CONFIG_PACKAGE_pigz=y
+CONFIG_PACKAGE_unrar=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_xz-utils=y
 # CONFIG_PACKAGE_lzmadec is not set
@@ -7821,7 +7824,7 @@ CONFIG_DOCKER_STO_BTRFS=y
 # end of Storage
 
 # CONFIG_PACKAGE_domoticz is not set
-CONFIG_PACKAGE_dropbearconvert=y
+# CONFIG_PACKAGE_dropbearconvert is not set
 # CONFIG_PACKAGE_dtc is not set
 # CONFIG_PACKAGE_dumb-init is not set
 # CONFIG_PACKAGE_dump1090 is not set
