--- a/aarch64/Lienol.config
+++ b/aarch64/Lienol.config
@@ -97,6 +97,7 @@ CONFIG_PACKAGE_simple-obfs-client=y
 CONFIG_SAMBA4_SERVER_AVAHI=y
 CONFIG_SAMBA4_SERVER_NETBIOS=y
 CONFIG_SAMBA4_SERVER_VFS=y
+CONFIG_PACKAGE_autocore=y
 # CONFIG_PACKAGE_automount is not set
 # CONFIG_PACKAGE_autosamba is not set
 # CONFIG_PACKAGE_luci-app-control-weburl is not set
