--- a/.github/workflows/Lienol Armvirt.yml
+++ b/.github/workflows/Lienol Armvirt.yml
@@ -13,8 +13,8 @@ env:
   REPO_URL: https://github.com/Lienol/openwrt
   REPO_BRANCH: 19.07
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: aarch64/ceshi.config
-  DIY_P1_SH: diy-part1.sh
+  CONFIG_FILE: aarch64/Lienol.config
+  DIY_P1_SH: aarch64/Lienol.sh
   DIY_P2_SH: diy-part2.sh
 #  MRG_ADD_SH: aarch64/ARMv8.sh
 #  Update_Ver_SH: aarch64/autoVersion.sh
